# SE-studying

./: README.md
1st semester/Algorithms and data structures/lab1/: lab1_taskA.cpp  lab1_taskB.cpp  lab1_taskC.cpp  lab1_taskD.cpp  lab1_taskE.cpp  lab1_taskF.cpp  lab1_taskG.cpp  lab1_taskH.cpp  lab1_taskI.cpp
1st semester/Algorithms and data structures/lab2/: lab2_taskA.cpp  lab2_taskB.cpp  lab2_taskC.cpp  lab2_taskD.cpp  lab2_taskE.cpp  lab2_taskF.cpp  lab2_taskG.cpp  lab2_taskH.cpp  lab2_taskI.cpp
1st semester/Algorithms and data structures/lab3/: lab3_taskA.cpp  lab3_taskB.cpp  lab3_taskC.cpp  lab3_taskD.cpp  lab3_taskE.cpp  lab3_taskF.cpp  lab3_taskG.cpp  lab3_taskH.cpp  lab3_taskI.cpp  lab3_taskJ.cpp  lab3_taskK.cpp
1st semester/Algorithms and data structures/lab4/: lab4_taskA.cpp  lab4_taskB.cpp  lab4_taskC.cpp  lab4_taskD.cpp  lab4_taskE.cpp  lab4_taskF.cpp  lab4_taskG.cpp  lab4_taskH.cpp
1st semester/Algorithms and data structures/lab5/: lab5_taskA.cpp  lab5_taskB.cpp  lab5_taskC.cpp  lab5_taskD.cpp  lab5_taskE.cpp  lab5_taskF.cpp  lab5_taskG.cpp  lab5_taskH.cpp
1st semester/Algorithms and data structures/lab6/: lab6_taskA.cpp  lab6_taskB.cpp  lab6_taskC.cpp  lab6_taskD.cpp  lab6_taskE.cpp  lab6_taskF.cpp
1st semester/Algorithms and data structures/lab7_coding/: lab7_taskA.cpp  lab7_taskB.cpp  lab7_taskC.cpp  lab7_taskD.cpp  lab7_taskE.cpp  lab7_taskF.cpp
1st semester/Algorithms and data structures/lab7_dp/: lab7_taskA.cpp  lab7_taskB.cpp  lab7_taskF.cpp  lab7_taskH.cpp
1st semester/Basics of programming/labwork3-NicroNn/: CMakeLists.txt  README.md
1st semester/Basics of programming/labwork3-NicroNn/lib/abel/: abel_heap.cpp
1st semester/Basics of programming/labwork3-NicroNn/lib/parser/: parser.h
2nd semester/Programming in C++/labwork7-NicroNn/: CMakeLists.txt  README.md  config.ini
2nd semester/Programming in C++/labwork7-NicroNn/lib/: CMakeLists.txt  UI.cpp  UI.h  config.cpp  config.h  weather.cpp  weather.h
2nd semester/Programming in C++/labwork9-NicroNn/tests/: CMakeLists.txt  adapter_tests.cpp
(+147 files in other folders)
